--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,8 @@ html {
 }
 
 .page {
-  width: 1200px;
+  inline-size: 1200px;
+  block-size: 100%;
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
